traversal.snake.Snake.scala.error
Compilation error:
Snake:5: error: value unary_! is not a member of Unit
  while(!positionFinale()){
        ^Snake:25: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^Snake:25: warning: enclosing method positionFinale has result type Unit: return value discarded
      return true
      ^